# LargeImageViewer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start-viewer.bat
src/: __init__.py  __main__.py  app.py
