[project]
name = "large-image-viewer"
version = "1.0.0"
authors = [
    { name = "Alejandro Lorenzo Ruiz" }
]
description = "A simple, high-performance viewer for very large images using OpenSeadragon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["image-viewer", "deep-zoom", "openseadragon", "gigapixel", "dzi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "flask>=2.3.0",
    "pyvips>=2.2.0",
    "gunicorn>=21.0.0",
    "werkzeug>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/large-image-viewer"
Repository = "https://github.com/yourusername/large-image-viewer"
Issues = "https://github.com/yourusername/large-image-viewer/issues"

[project.scripts]
large-image-viewer = "src.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
